*Version 3.3.4*
* Export publishers in nightly backup
* Add INFO level log message to indicate end of configuration backup task

*Version 3.3.3*
* Fix bug where data point tags were not exported when using the search-and-export feature of the data point tables on the Data Source Edit page
* Attempt to open unknown comm port identifiers as JSSC serial ports before reporting port not found failure
* Check owned ports during port list refresh
* Fix deadlock issue when changing password due to websocket code upgrading a read lock to a write lock
* Move websocket notifications, raising events etc out of transaction in UserDao

*Version 3.3.2*
* Maximum file upload size configurable via env property web.fileUpload.maxSize
* Removed rest.customDateOutputFormat and rest.customDateInputFormat env properties, REST dates are always ISO 8601 format now
* Performance improvements in JSON exports, more consistency in missing points export as null xids
* Performance improvements for Audit tracking, more efficient change detection

*Version 3.3.1*
* Removing superadmin duplicate permission text box on legacy system settings page
* Adding validation so users know its not possible to change the read only superadmin permission
* Fixing initializeHistorical to set DataPointRT's pointValue and interval appropriately
* Enable using websockets with JWT token authentication
* Fix RQL queries which do in-memory compare against enums
* Fix default date/time format for REST API
* Adding Interval Log On Change logging type for data points, ensure you update the MangoApi module to 3.3.3
* Fix for broken SQL point value bookend query to now return null data value for first values before query time if none exists
* Fix for broken SQL point value bookend query to return bookends in time order of query
* Using bookend query to improve visuals of JFree chart on Legacy Data Point Details page.
* Improved accuracy of writes per second for SQL Point Value databases