@@ -1,0 +1,5 @@
+package com.serotonin.m2m2.rt.script;
+
+public interface ScriptPointValueRollupCallback {
+    public void item(Object itemValue);
+}
