@@ -1,0 +1,8 @@
+package com.serotonin.m2m2.rt.script;
+
+import com.infiniteautomation.mango.db.query.BookendQueryCallback;
+import com.serotonin.m2m2.rt.dataImage.IdPointValueTime;
+
+public interface ScriptPointValueTimeCallback extends BookendQueryCallback<IdPointValueTime> {
+    
+}
